<resources>
    <string name="hazard">Risks</string>
    <string name="types_of_hazard">Types of Hazards</string>
    <string name="quiz">Quiz</string>
    <string name="tools">Tools</string>
    <string name="management">OSH management</string>
    <string name="equipment">PPE and CPE</string>
    <string name="checklist">Checklist</string>
    <string name="about">About</string>
    <string name="contact">Contact us</string>
    <string name="youtube">Videos</string>
    <string name="app_name">AquaSafe</string>
    <string name="title_activity_hazard">HazardActivity</string>
    <string name="risk_explanation">Occupational Risks</string>
    <string name="hierarchy_control">Hierarchy of Controls</string>
    <string name="electrocution">Electrocution</string>
    <string name="noise">Noise</string>
    <string name="solar_radiation">Solar Radiation</string>
    <string name="fire_explosion">Fire and Explosion</string>
    <string name="extreme_temperatures">Extreme \n Temperatures</string>
    <string name="humidity">Humidity and \n exposure to water</string>
    <string name="dust_gases">Dust and Gases</string>
    <string name="products">Substances, compounds \n or products chemical</string>
    <string name="resistance">Antimicrobial Resistance (AMR)</string>
    <string name="zoonoses">Zoonoses</string>
    <string name="animals">Animals</string>
    <string name="excessive_physical_effort">Excessive physical effort</string>
    <string name="psychosocial">Psychosocial</string>
    <string name="excessive_workday">Excessive Workday</string>
    <string name="night_work">Night Work</string>
    <string name="machinery">Machinery</string>
    <string name="slips">Slips</string>
    <string name="drowning">Drowning</string>
    <string name="cutting_drilling">Needlestick Injuries</string>
    <string name="physic">Physical</string>
    <string name="chemical">Chemical</string>
    <string name="biologic">Biological</string>
    <string name="ergonomic">Ergonomic</string>
    <string name="injurious_incidents">Injurious Incidents</string>
    <string name="injurious_incidents_title">Safety</string>
    <string name="cause">Hazard</string>
    <string name="type_hazard">Risk / Health Damage</string>
    <string name="control">Prevention and Control</string>
    <string name="cause_electrocution">"Water contact with power transmission lines; \n
Lack of grounding systems; \n
Electric shock caused by working in high humidity locations; \n
Electric shock caused by standby power when main power is turned off for maintenance reasons; \n
Bare wires."</string>
    <string name="hazard_electrocution">"Burns; \n
Abnormal and irregular heart rhythm; \n
Nerve disorders; \n
Involuntary Muscle Contraction (spasm); \n
Death."</string>
    <string name="control_electrocution">"<b>Elimination or replacement:</b>
• Use Ground Fault Circuit Interrupters (GFCI), fuses and circuit breakers to reduce the likelihood of electric shock; \n
<b>Engineering controls:</b>
• Ensure the use of fuses and an adequate grounding system; \n
• Make sure all cables are intact and waterproof; \n
• Avoid electric overload.

<b>Administrative and PPE:</b>
• Training workers on the risks of electric shock associated with using equipment close to water; \n
• Electrical installations must be reviewed and guaranteed by a qualified electrician; \n
• Never work alone so that in case of an electric shock, you have someone who can turn off the power; \n
• The power must be turned off when the equipment is handled; \n
• Ensure regular equipment maintenance; \n
• Place electrical hazard signs on equipment with risk of electric shock.</string>
    <string name="cause_noise">"Constant exposure to noise emitted by vehicles and machines (boat engine, Oyster washing machines and high pressure washers) and water movements."</string>
    <string name="hazard_noise">"Temporary or permanent hearing loss; \n
Inner ear injury (Acoustic trauma) from sudden very loud noise exposure; \n
Ringing/buzzing in the ear; \n
Physical and psychological stress; \n
Annoyance; \n
Rapid heart rate and hypertension; \n
Sleep disturbance; \n
Headaches; \n
Interference in communication and concentration."</string>
    <string name="default_highscore">You have not filled out the checklist yet.</string>
    <string name="checklist_introduction">Occupational Health is responsible for prevention and protection of people\'s health, acting in actions aimed at the promotion and preservation of their health. To help you - and encourage - we set up this general inspection checklist:</string>
    <string name="fill_checklist">Fill Checklist</string>
    <string name="back_result">Review last result</string>
    <string name="confirm">Confirm</string>
    <string name="about_descrition">Aquasafe is a platform for promoting workers\' safety and health in aquaculture, with actions aimed at aquaculture workers and producers, students and professionals.\nIt addresses the main hazards and associated health risks in aquaculture work environments. Information on prevention, use of safety equipment and damage to health is also available in the app.\nAquaSafe can be used in the assessment of occupational risks through a checklist and other tools. It assists in the decision making of injury and disease prevention methods, techniques or measures through providing information on eliminating or reducing risks, engineering controls and/or administrative controls and use of PPE.\nLearning can be assessed through an interactive quiz.\n </string>
    <string name="about_information"><b>*This application does not replace management and assessments of trained professionals in loco.\n</b></string>
    <string name="equipe">TEAM</string>
    <string name="equipe_names">

        "<b>Coordinator:\n</b>"
        "Dr. Lissandra Souto Cavalli (DDPA/SEAPDR-RS)\n\n"

        "<b>Application Development:\n</b>"
        "Flavielle Blanco Marques (UFCSPA | CNPq)\n"
        "Giovani Nícolas Bettoni (UFCSPA | DDPA/SEAPDR-RS)\n"
        "Bruno Tavares (UFCSPA | CNPq)\n\n"

        "<b>AquaSafe Core Team:\n</b>"
        "Dr. Lissandra Souto Cavalli (DDPA/SEAPDR-RS)\n"
        "Flavielle Blanco Marques (UFCSPA | CNPq)\n"
        "Giovani Nícolas Bettoni (UFCSPA | DDPA/SEAPDR-RS)\n"
        "Bruno Tavares (UFCSPA | CNPq)\n"
        "Dr. Silvio Cazella (UFCSPA)\n"
        "Dr. Rebecca Mitchell (Macquarie University, Australia)\n"
        "Dr. Luceni Hellebrandt\n"
        "Dr. Kirill Buketov (IUF)\n"
        "Dr. Andrew Watterson (University of Stirling, Scotland)\n"
        "Dr. Mohamed Jeebhay (University of Cape Town, South Africa)\n"
        "Dr. Dorothy Ngajilo (University of Cape Town, South Africa)\n"
        "Dr. Deji Adeoye (Federal University of Agriculture, Nigeria)\n\n"

        "<b>Technical consultancy Group<i>(ad hoc)</i>:\n</b>"
        "Dr. Arpita Sharma (ICAR-CIFE)\n"
        "Dr. Maria Helena Fermino (DDPA/SEAPDR-RS)\n"
        "Dr. Benito Brito (DDPA/SEAPDR-RS)\n"
        "Dr. Kelly Cristina Tagliari de Brito (DDPA/SEAPDR-RS)\n"
        "Julio Bastola (<i>ad hoc</i> Quality Tools)\n"
        "Henrique Fonseca (<i>ad hoc</i> Work Safety Technician)\n\n"

        "<b>COVID Update:\n</b>"
        "Dr. Lissandra Souto Cavalli (DDPA/SEAPDR-RS)\n"
        "Dr. Barbara Neis (Memorial University, Newfoundland and Labrador, Canada)\n"
        "Eduarda Serpa (UFCSPA | DDPA/SEAPDR-RS)\n"
        "Willian de Vargas (UFCSPA | DDPA/SEAPDR-RS)\n"
        "Dr. Andrew Watterson (University of Stirling, Scotland)\n"
</string>
    <string name="instituicoes">INSTITUTIONS</string>
    <string name="bibliotecas">REFERENCES</string>
    <string name="bibliotecas_descricao">
        " Ícones: flaticon.com\n\n"
        " Checklist: github.com/edupooch/AquaSaude-Camarao\n\n"
        " http://www.wcb.pe.ca/DocumentManagement/Document/pub_aquaculturesafetycodeofpractice.pdf\n\n"
        " https://www.aquaculturecouncilwa.com/files/5814/0462/8115/WAAquaIndustryOHSCode2002.pdf\n\n"
        " https://novascotia.ca/lae/healthandsafety/docs/FishSafe.pdf\n\n"
        " https://www.dpc.mar.mil.br/sites/default/files/normam05.pdf\n\n"
        " https://www.ccaimo.mar.mil.br/sites/default/files/solas_indice-2014_2.pdf\n\n"
        " http://www.hse.gov.uk/toolbox/ppe.htm\n\n"
        " http://www.fao.org/cofi/aq/90408/en/\n\n"
        " http://www.fao.org/cofi/46125-015d659aed398efe120a5953620684aea.pdf\n\n"
        " http://www.who.int/foodsafety/areas_work/antimicrobial-resistance/en/\n\n"
        " http://apps.who.int/iris/bitstream/handle/10665/258970/9789241550130-eng.pdf?sequence=1\n\n"
        " IUF meat division - AMR\n\n"
        " OHSAS 18001\n\n"
        " ILO\n\n"
        " Koonse B. 2012. Good aquaculture practices to minimize bacterial resistance. In: Improving biosecurity through prudent and responsible use of veterinary medicines in aquatic food production. FAO fisheries and Aquaculture Technical Paper 547. Rome, Italy, 208p.\n\n"
        " Myers ML, Durborow RM. Aquacultural safety and health. In: Edmir Carvalho ed. Health and Environment in Aquaculture. Croatia: InTech; 2012. doi: 10.5772/29258. Available at: http://www.intechopen.com/books/health-and-environment-in-aquaculture/aquacultural-safety-and-health\n\n"
        " Myers ML, Cole HP. Simple solutions for reduced fish farm hazards. J Agromedicine. 2009;14:150–156.\n\n"
        " Myers ML, Durborow RM, Cole HP. 2012. Inherently safer - Aquacultural work: Hierarchical hazard controls. Professional Safety: 44-51.\n\n"

    </string>
    <string name="yes_rdbtn">Yes</string>
    <string name="no_rdbtn">No</string>
    <string name="corrective_action">Insert corrective action to be taken</string>
    <string name="export_pdf">Export to PDF</string>
    <string name="worker_q1">" 1 - Are the workers members of a union?"</string>
    <string name="worker_q2">" 2 - Does the union have a member, specifically trained to address health and safety issues at this workplace? "</string>
    <string name="worker_q3">" 3 - Is there a union-management OHS committee and is it functioning regularly?"</string>
    <string name="worker_q4">" 4 - Is there a collective bargaining agreement, with provisions on OHS, signed between union and management? "</string>
    <string name="worker_q5">" 5 - For issues relevant for women, is there a union women's committee at the workplace, or a female union representative, trained to address issues of gender equality, maternity rights and gender based violence? "</string>
    <string name="problem">Problem</string>
    <string name="main_problem">Define the problem clearly here</string>
    <string name="root_text">Root cause:</string>
    <string name="solution">What are the possible solutions?</string>
    <string name="other_projects">Get to know more</string>
    <string name="activity_what">Activity</string>
    <string name="activity_what_ie">Insert here the work activity</string>
    <string name="question_what">What If</string>
    <string name="question_what_ie">Insert here which adverse/problem event may occur when performing the activity</string>
    <string name="cause_what">Causes</string>
    <string name="cause_what_ie">Insert possible causes here for this adverse event</string>
    <string name="consequences_what">Consequences</string>
    <string name="consequences_what_ie">Insert here what possible damages to the worker may occur</string>
    <string name="measures_what">Measures</string>
    <string name="measures_what_ie">Insert here corrective measures to avoid the adverse event and protect the worker</string>
    <string name="cd_child_labour">Two children playing to the left, and the right to say "No to child labor!"</string>
</resources>