<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/content_what_end"
    android:orientation="vertical">

    <TextView
        android:id="@+id/activity_what"
        android:layout_width="match_parent"
        android:text="@string/activity_what"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/question_what"
        android:layout_width="match_parent"
        android:text="@string/question_what"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/cause_what"
        android:layout_width="match_parent"
        android:text="@string/cause_what"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/consequences_what"
        android:layout_width="match_parent"
        android:text="@string/consequences_what"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/measures_what"
        android:layout_width="match_parent"
        android:text="@string/measures_what"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnShareWhatPDF"
        android:backgroundTint="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/export_pdf" />

</LinearLayout>