<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txt_activity_what"
        android:layout_width="match_parent"
        android:text="@string/activity_what_ie"
        android:layout_height="wrap_content" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtInput_activity_what"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_activity_what"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/activity_what"
            android:singleLine="false" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_confirm_activity"
        android:backgroundTint="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm" />

    <TextView
        android:id="@+id/txt_question_what"
        android:layout_width="match_parent"
        android:text="@string/question_what_ie"
        android:layout_height="wrap_content" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtInput_question_what"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_question_what"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:hint="@string/question_what"
            android:singleLine="false" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_confirm_question"
        android:backgroundTint="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm" />

    <TextView
        android:id="@+id/txt_cause_what"
        android:layout_width="match_parent"
        android:text="@string/cause_what_ie"
        android:layout_height="wrap_content" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtInput_cause_what"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_cause_what"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cause_what"
            android:singleLine="false" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_confirm_cause"
        android:backgroundTint="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm" />

    <TextView
        android:id="@+id/txt_consequences_what"
        android:layout_width="match_parent"
        android:text="@string/consequences_what_ie"
        android:layout_height="wrap_content" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtInput_consequences_what"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_consequences_what"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/consequences_what"
            android:singleLine="false" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_confirm_consequences"
        android:backgroundTint="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm" />

    <TextView
        android:id="@+id/txt_measures_what"
        android:layout_width="match_parent"
        android:text="@string/measures_what_ie"
        android:layout_height="wrap_content" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtInput_measures_what"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_measures_what"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/measures_what"
            android:singleLine="false" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_confirm_measures"
        android:backgroundTint="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm" />
</LinearLayout>
