<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <TextView
        android:focusable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:hint="@string/problem" />

    <EditText
        android:id="@+id/main_problem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:hint="@string/main_problem"
        android:inputType="textAutoComplete|textMultiLine" />

    <Button
        android:id="@+id/btn_confirm_problem"
        android:backgroundTint="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp" />

</LinearLayout>
