<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/worker_q1" />

    <RadioGroup
        android:id="@+id/groupWorker_question1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rdbtn1_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/yes_rdbtn" />

        <RadioButton
            android:id="@+id/rdbtn1_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/no_rdbtn" />
    </RadioGroup>

    <EditText
        android:id="@+id/justWorker_q1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/corrective_action"
        android:inputType="text|textMultiLine" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/worker_q2" />

    <RadioGroup
        android:id="@+id/groupWorker_question2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rdbtn2_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/yes_rdbtn" />

        <RadioButton
            android:id="@+id/rdbtn2_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/no_rdbtn" />
    </RadioGroup>

    <EditText
        android:id="@+id/justWorker_q2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/corrective_action"
        android:inputType="text|textMultiLine" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/worker_q3" />

    <RadioGroup
        android:id="@+id/groupWorker_question3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rdbtn3_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/yes_rdbtn" />

        <RadioButton
            android:id="@+id/rdbtn3_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/no_rdbtn" />
    </RadioGroup>

    <EditText
        android:id="@+id/justWorker_q3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/corrective_action"
        android:inputType="text|textMultiLine" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/worker_q4" />

    <RadioGroup
        android:id="@+id/groupWorker_question4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rdbtn4_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/yes_rdbtn" />

        <RadioButton
            android:id="@+id/rdbtn4_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/no_rdbtn" />
    </RadioGroup>

    <EditText
        android:id="@+id/justWorker_q4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/corrective_action"
        android:inputType="text|textMultiLine" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/worker_q5" />

    <RadioGroup
        android:id="@+id/groupWorker_question5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rdbtn5_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/yes_rdbtn" />

        <RadioButton
            android:id="@+id/rdbtn5_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/no_rdbtn" />
    </RadioGroup>

    <EditText
        android:id="@+id/justWorker_q5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/corrective_action"
        android:inputType="text|textMultiLine" />

</LinearLayout>