<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_marginTop="56dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:src="@drawable/safetyandsecurity"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"/>

            <TextView
                android:id="@+id/text_highscore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/default_highscore"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:paddingTop="10dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/checklist_introduction" />

            <Button
                android:id="@+id/buttonChecklist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_background"
                android:clickable="true"
                android:gravity="center"
                android:tag="preencher checklist"
                android:text="@string/fill_checklist"
                android:textColor="#fff" />

            <Button
                android:id="@+id/button_rever"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:background="@drawable/button_background_dark"
                android:text="@string/back_result"
                android:textColor="#fff"
                android:visibility="gone" />

        </LinearLayout>
    </RelativeLayout>

</ScrollView>